buildkit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildkit
  labels:
    app.kubernetes.io/name: buildkit
