buildkit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: buildkit
  labels:
    app.kubernetes.io/name: buildkitd
spec:
  selector:
    app.kubernetes.io/name: buildkitd
  ports:
    - name: tcp
      port: 1234
      targetPort: tcp
